--- a/index.html
+++ b/index.html
@@ -1,101 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Easybank landing page</title>
+
+  <link rel="stylesheet" href="./static/css/estilos.css">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+  <header class="header">
+    <img src="./static/images/logo.svg" alt="logo">
+    <nav class="menu">
+      Home
+      About
+      Contact
+      Blog
+      Careers
+    </nav>
 
-  Request Invite
+    <buttom>Request Invite</buttom>
+
+  </header>
+
+  <section class="hero">
+    <div class="wrapper">
+      <div class="hero__image">
+
+      </div>
+      <h1 class="title__h1">Next generation digital banking</h1>
+      <p class="copy">Take your financial life online. Your Easybank account will be a one-stop-shop
+        for spending, saving, budgeting, investing, and much more.</p>
+      <button class="button">Request Invite</button>
+    </div>
+  </section>
+
+  <section class="why">
+    <div class="wrapper">
+      <h1 class="title__h1">Why choose Easybank?</h1>
+      <p class="copy">
+        We leverage Open Banking to turn your bank account into your financial hub. Control
+        your finances like never before.
+      </p>
+      <div class="why__grid">
+
+        <div class="why__item">
+          <img src="./static/images/icon-online.svg" alt="">
+          <h1 class="title__h2">Online Banking</h1>
+          <p class="copy">Our modern web and mobile applications allow you to keep track of your finances
+            wherever you are in the world.</p>
+        </div>
+
+        <div class="why__item">
+          <img src="./static/images/icon-budgeting.svg" alt="">
+          <h1 class="title__h2">Simple Budgeting</h1>
+          <p class="copy">See exactly where your money goes each month. Receive notifications when you’re
+            close to hitting your limits.</p>
+        </div>
+
+        <div class="why__item">
+          <img src="./static/images/icon-onboarding.svg" alt="">
+          <h1 class="title__h2">Fast Onboarding</h1>
+          <p class="copy">We don’t do branches. Open your account in minutes online and start taking control
+            of your finances right away.</p>
+        </div>
+
+        <div class="why__item">
+          <img src="./static/images/icon-api.svg" alt="">
+          <h1 class="title__h2">Open API</h1>
+          <p class="copy">Manage your savings, investments, pension, and much more from one account. Tracking
+            your money has never been easier.</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="latesArticles">
+    <div class="wrapper">
+      <h1 class="title__h1">
+        Latest Articles
+      </h1>
+      <div class="latesArticles__grid">
+        <article class="latesArticles__item">
+          <img height="200" src="./static/images/image-currency.jpg" alt="">
+          <div class="latesArticles__item-content">
+            <small>
+              By Claire Robinson
+            </small>
+            <h3 class="title__h3">Receive money in any currency with no fees</h3>
+            <p class="copy">The world is getting smaller and we’re becoming more mobile. So why should you be
+              forced to only receive money in a single …</p>
+          </div>
+        </article>
+
+        <article class="latesArticles__item">
+          <img height="200" src="./static/images/image-restaurant.jpg" alt="">
+          <div class="latesArticles__item-content">
+            <small>
+              By Wilson Hutton
+            </small>
+            <h3 class="title__h3">Treat yourself without worrying about money</h3>
+            <p class="copy">Our simple budgeting feature allows you to separate out your spending and set
+              realistic limits each month. That means you …</p>
+          </div>
+        </article>
+
+        <article class="latesArticles__item">
+          <img height="200" src="./static/images/image-plane.jpg" alt="">
+          <div class="latesArticles__item-content">
+            <small>
+              By Wilson Hutton
+            </small>
+            <h3 class="title__h3">Take your Easybank card wherever you go</h3>
+            <p class="copy">We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+              while you’re abroad. We’ll even show you …</p>
+          </div>
+        </article>
+
+        <article class="latesArticles__item">
+          <img height="200" src="./static/images/image-confetti.jpg" alt="">
+          <div class="latesArticles__item-content">
+            <small>
+              By Claire Robinson
+            </small>
+            <h3 class="title__h3">Our invite-only Beta accounts are now live!</h3>
+            <p class="copy">After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+              It’s easy to request an invite through the site ...</p>
+          </div>
+        </article>
+      </div>
+
+    </div>
 
 
+  </section>
 
-  Next generation digital banking
+  <footer class="footer">
+    <div class="wrapper">
+      <img src="./static/images/logo-white.svg" alt="logo">
+      <div class="footer__social">
+        <a href="#" class="icon__facebook"></a>
+        <a href="#" class="icon__youtube"></a>
+        <a href="#" class="icon__twitter"></a>
+        <a href="#" class="icon__pinterest"></a>
+        <a href="#" class="icon__instagram"></a>
+      </div>
 
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
+      <a href="#" class="footer__link">About Us</a>
+      <a href="#" class="footer__link">Contact</a>
+      <a href="#" class="footer__link">Blog</a>
+      <a href="#" class="footer__link">Careers</a>
+      <a href="#" class="footer__link">Support</a>
+      <a href="#" class="footer__link">Privacy Policy</a>
 
-  Request Invite
+      <div>
+        <button class="button">Request Invite</button>
+      </div>
 
 
+      <p class="footer__copyright">© Easybank. All Rights Reserved</p>
 
-  Why choose Easybank?
+    </div>
+  </footer>
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
-
-  
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
-
-  
-
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
-
-  Request Invite
-
-  © Easybank. All Rights Reserved
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
