movil version final

--- a/index.html
+++ b/index.html
@@ -33,14 +33,10 @@
   <header class="header">
     <img src="./static/images/logo.svg" alt="logo">
     <nav class="menu">
-      Home
-      About
-      Contact
-      Blog
-      Careers
+
     </nav>
 
-    <buttom>Request Invite</buttom>
+    <!-- <buttom>Request Invite</buttom> -->
 
   </header>
 
