--- a/index.html
+++ b/index.html
@@ -29,158 +29,210 @@
 </head>
 
 <body>
-
   <header class="header">
-    <img src="./static/images/logo.svg" alt="logo">
-    <nav class="menu">
-
-    </nav>
-
-    <!-- <buttom>Request Invite</buttom> -->
-
+    <div class="wrapper">
+      <div class="header__content">
+        <img class="header__logo" src="./static/images/logo.svg" alt="">
+        <!-- <input type="checkbox" id="menu" class="menu__checkbox"> -->
+        <ul class="menu">
+          <li class="menu__item">
+            <a href="">Home</a>
+          </li>
+          <li class="menu__item">
+            <a href="">About</a>
+          </li>
+          <li class="menu__item">
+            <a href="">Contact</a>
+          </li>
+          <li class="menu__item">
+            <a href="">Blog</a>
+          </li>
+          <li class="menu__item">
+            <a href="">Careers</a>
+          </li>
+        </ul>
+        <button class="button">request invite</button>
+        <label for="menu" class="menu__button"></label>
+      </div>
+    </div>
   </header>
 
-  <section class="hero">
+  <section class="hero ">
     <div class="wrapper">
-      <div class="hero__image">
-
+      <div class="hero__content">
+        <div class="hero__image">
+          <img class="hero__imageSrc" src="./static/images/image-mockups.png" alt="">
+        </div>
+        <div class="hero__description">
+          <h1 class="title__h1">Next generation digital banking</h1>
+          <p class="copy">Take your finalcial life online. Your Easybank account will be a one-stop-shop for spending.
+            saving,
+            budgeting,
+            investing, and much more.</p>
+          <button class="button">Request Invite</button>
+        </div>
       </div>
-      <h1 class="title__h1">Next generation digital banking</h1>
-      <p class="copy">Take your financial life online. Your Easybank account will be a one-stop-shop
-        for spending, saving, budgeting, investing, and much more.</p>
-      <button class="button">Request Invite</button>
     </div>
   </section>
 
-  <section class="why">
+  <section class="why ">
     <div class="wrapper">
       <h1 class="title__h1">Why choose Easybank?</h1>
       <p class="copy">
-        We leverage Open Banking to turn your bank account into your financial hub. Control
-        your finances like never before.
+        We leverage Open Banking to turn your bank account into your finatial hub. Control your finaces like never
+        before.
       </p>
       <div class="why__grid">
-
         <div class="why__item">
           <img src="./static/images/icon-online.svg" alt="">
           <h1 class="title__h2">Online Banking</h1>
-          <p class="copy">Our modern web and mobile applications allow you to keep track of your finances
-            wherever you are in the world.</p>
+          <p class="copy">
+            Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
+          </p>
         </div>
-
         <div class="why__item">
           <img src="./static/images/icon-budgeting.svg" alt="">
           <h1 class="title__h2">Simple Budgeting</h1>
-          <p class="copy">See exactly where your money goes each month. Receive notifications when you’re
-            close to hitting your limits.</p>
+          <p class="copy">
+            See exactly where your money goes each month. Receive notifications when you're close to your hitting
+            limits.
+          </p>
         </div>
-
+        <div class="why__item">
+          <img src="./static/images/icon-budgeting.svg" alt="">
+          <h1 class="title__h2">Fast Onboarding</h1>
+          <p class="copy">
+            We dont't do branches. Open your account in minutes online and start taking control of your finances right
+            away.
+          </p>
+        </div>
         <div class="why__item">
           <img src="./static/images/icon-onboarding.svg" alt="">
-          <h1 class="title__h2">Fast Onboarding</h1>
-          <p class="copy">We don’t do branches. Open your account in minutes online and start taking control
-            of your finances right away.</p>
-        </div>
-
-        <div class="why__item">
-          <img src="./static/images/icon-api.svg" alt="">
           <h1 class="title__h2">Open API</h1>
-          <p class="copy">Manage your savings, investments, pension, and much more from one account. Tracking
-            your money has never been easier.</p>
+          <p class="copy">
+            Manage your saving, investments, pensions, and much more from one account. Tracking your money has never
+            been easier.
+          </p>
         </div>
 
       </div>
     </div>
   </section>
 
-  <section class="latesArticles">
+  <section class="latestArticles ">
     <div class="wrapper">
       <h1 class="title__h1">
         Latest Articles
       </h1>
-      <div class="latesArticles__grid">
-        <article class="latesArticles__item">
+      <div class="latestArticles__grid">
+        <article class="latestArticles__item">
           <img height="200" src="./static/images/image-currency.jpg" alt="">
-          <div class="latesArticles__item-content">
+          <div class="latestArticles__item-content">
             <small>
               By Claire Robinson
             </small>
-            <h3 class="title__h3">Receive money in any currency with no fees</h3>
-            <p class="copy">The world is getting smaller and we’re becoming more mobile. So why should you be
-              forced to only receive money in a single …</p>
+            <h3 class="title__h3">
+              Receive money in any currency with no fees
+            </h3>
+            <p class="copy">
+              The world is getting smaller and we’re becoming more mobile. So why should you be
+              forced to only receive money in a single …
+            </p>
           </div>
         </article>
-
-        <article class="latesArticles__item">
+        <article class="latestArticles__item">
           <img height="200" src="./static/images/image-restaurant.jpg" alt="">
-          <div class="latesArticles__item-content">
+          <div class="latestArticles__item-content">
             <small>
               By Wilson Hutton
             </small>
-            <h3 class="title__h3">Treat yourself without worrying about money</h3>
-            <p class="copy">Our simple budgeting feature allows you to separate out your spending and set
-              realistic limits each month. That means you …</p>
+            <h3 class="title__h3">
+              Treat yourself without worrying about money
+            </h3>
+            <p class="copy">
+              Our simple budgeting feature allows you to separate out your spending and set
+              realistic limits each month. That means you …
+            </p>
           </div>
         </article>
+        <article class="latestArticles__item">
 
-        <article class="latesArticles__item">
           <img height="200" src="./static/images/image-plane.jpg" alt="">
-          <div class="latesArticles__item-content">
+          <div class="latestArticles__item-content">
+
             <small>
               By Wilson Hutton
             </small>
-            <h3 class="title__h3">Take your Easybank card wherever you go</h3>
-            <p class="copy">We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-              while you’re abroad. We’ll even show you …</p>
+            <h3 class="title__h3">
+              Take your Easybank card wherever you go
+            </h3>
+            <p class="copy">
+              We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+              while you’re abroad. We’ll even show you …
+            </p>
           </div>
         </article>
-
-        <article class="latesArticles__item">
+        <article class="latestArticles__item">
           <img height="200" src="./static/images/image-confetti.jpg" alt="">
-          <div class="latesArticles__item-content">
+          <div class="latestArticles__item-content">
+
             <small>
               By Claire Robinson
             </small>
-            <h3 class="title__h3">Our invite-only Beta accounts are now live!</h3>
-            <p class="copy">After a lot of hard work by the whole team, we’re excited to launch our closed beta.
-              It’s easy to request an invite through the site ...</p>
+            <h3 class="title__h3">
+              Our invite-only Beta accounts are now live!
+            </h3>
+            <p class="copy">
+              After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+              It’s easy to request an invite through the site ...
+            </p>
           </div>
         </article>
       </div>
-
     </div>
-
 
   </section>
 
   <footer class="footer">
     <div class="wrapper">
-      <img src="./static/images/logo-white.svg" alt="logo">
-      <div class="footer__social">
+      <img class="footer__logo" src="./static/images/logo-white.svg">
+      <p class="footer__social">
         <a href="#" class="icon__facebook"></a>
         <a href="#" class="icon__youtube"></a>
         <a href="#" class="icon__twitter"></a>
         <a href="#" class="icon__pinterest"></a>
         <a href="#" class="icon__instagram"></a>
+      </p>
+      <div class="footer__links">
+        <a href="#" class="footer__link">
+          About Us
+        </a>
+        <a href="#" class="footer__link">
+          Contact
+        </a>
+        <a href="#" class="footer__link">
+          Blog
+        </a>
+        <a href="#" class="footer__link">
+          Careers
+        </a>
+        <a href="#" class="footer__link">
+          Support
+        </a>
+        <a href="#" class="footer__link">
+          Privacy Policy
+        </a>
       </div>
-
-      <a href="#" class="footer__link">About Us</a>
-      <a href="#" class="footer__link">Contact</a>
-      <a href="#" class="footer__link">Blog</a>
-      <a href="#" class="footer__link">Careers</a>
-      <a href="#" class="footer__link">Support</a>
-      <a href="#" class="footer__link">Privacy Policy</a>
-
-      <div>
-        <button class="button">Request Invite</button>
+      <div class="footer__button">
+        <button class="button">
+          Request Invite
+        </button>
       </div>
-
-
-      <p class="footer__copyright">© Easybank. All Rights Reserved</p>
-
+      <p class="footer__copyright">
+        © Easybank. All Rights Reserved
+      </p>
     </div>
   </footer>
-
 </body>
 
 </html>
