--- a/index.html
+++ b/index.html
@@ -16,16 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
 
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -33,7 +24,7 @@
     <div class="wrapper">
       <div class="header__content">
         <img class="header__logo" src="./static/images/logo.svg" alt="">
-        <!-- <input type="checkbox" id="menu" class="menu__checkbox"> -->
+        <input type="checkbox" id="menu" class="menu__checkbox">
         <ul class="menu">
           <li class="menu__item">
             <a href="">Home</a>
